# gaden2_archive

./: .gitmodules  README.md  common_config.cmake  config description.md  gaden2.pro
gaden_common/: CMakeLists.txt  gaden_common-extras.cmake  gaden_common.pri  package.xml
gaden_common/include/gaden_common/: cache_grid.hpp  cad_model.h  chemical_substance.hpp  eigen_helper.hpp  file_read_helper.h  filesystem.h  gaden1_occupancy_grid_importer.h  gas_source.hpp  grid_helper.hpp  grid_to_marker.hpp  inline_environment.hpp  interpolation.hpp  math_helper.h  multidim_vector.h  object_pool.hpp  occupancy.hpp  occupancy_grid.h  occupancy_grid_type.h  openvdb_box.hpp  openvdb_coordinates.hpp  openvdb_helper.h  ros_parameters.h  ros_type_helper.h  to_string.hpp
gaden_common/src/: cad_model.cpp  eigen_helper.cpp  file_read_helper.cpp  filesystem.cpp  gaden1_occupancy_grid_importer.cpp  gas_source.cpp  grid_to_marker.cpp  inline_environment.cpp  interpolation.cpp  occupancy.cpp  occupancy_grid.cpp  openvdb_box.cpp  openvdb_helper.cpp  playground.cpp  ros_parameters.cpp  ros_type_helper.cpp
gaden_eigen/: CMakeLists.txt  package.xml
gaden_environment/: CMakeLists.txt  gaden_environment.pri  package.xml
gaden_environment/include/gaden_environment/: environment.h  grid_to_marker.h  type_helper.h
gaden_environment/src/: environment.cpp  grid_to_marker.cpp  main.cpp  type_helper.cpp
gaden_filament_simulator/: CMakeLists.txt  gaden_filament_simulator.pri  package.xml
gaden_filament_simulator/include/gaden_filament_simulator/: environment_model.hpp  environment_visualisation.hpp  farrells_wind_model.hpp  farrells_wind_model_noise.hpp  filament.hpp  filament_grid.hpp  filament_model.hpp  filament_model_rviz.hpp  filament_simulator.h  gas_dispersion_model.hpp  inline_wind_model.hpp  occupancy.hpp  openvdb_environment_model.hpp  physical_constants.hpp  simulator.hpp  simulator_config.hpp  wind_model.hpp
gaden_filament_simulator/include/gaden_filament_simulator/sensor/: insitu.hpp  open_path.hpp  sensor_base.hpp
gaden_filament_simulator/src/: environment_model.cpp  environment_visualisation.cpp  farrells_wind_model.cpp  farrells_wind_model_noise.cpp  filament.cpp  filament_grid.cpp  filament_model.cpp  filament_model_rviz.cpp  filament_simulator.cpp  gas_dispersion_model.cpp  inline_wind_model.cpp  main.cpp  occupancy.cpp  openvdb_environment_model.cpp  simulator.cpp  simulator_config.cpp  wind_model.cpp
gaden_filament_simulator/src/sensor/: insitu.cpp  open_path.cpp  sensor_base.cpp
gaden_player/: CMakeLists.txt  package.xml
gaden_preprocessing/: CMakeLists.txt  gaden_preprocessing.pri  package.xml
gaden_preprocessing/include/gaden_preprocessing/: math_helper.h  occupancy_grid.h  occupancy_grid_type.h  png_exporter.h  preprocessing.h  stl_data.h  stl_format.h  stl_to_grid.h  vector_helper.h  wind_converter.h
gaden_preprocessing/src/: main.cpp  main_occupancy_converter.cpp  occupancy_grid.cpp  png_exporter.cpp  preprocessing.cpp  stl_data.cpp  stl_format.cpp  stl_to_grid.cpp  wind_converter.cpp
olfaction_msgs/: CMakeLists.txt  olfaction_msgs.pri  package.xml
olfaction_msgs/msg/: FrameOrientation.msg  FramePoint.msg  OpenPathMeasurement.msg
simulated_anemometer/: CMakeLists.txt  package.xml
simulated_gas_sensor/: CMakeLists.txt  package.xml
simulated_gas_sensor_array/: CMakeLists.txt  package.xml
test_env2/: CMakeLists.txt  gaden2.rviz  neu.rviz  package.xml
test_env2/10x6_empty_room/: config.yaml
test_env2/launch/: 10x6_empty_room.launch.py  10x6_empty_room_preprocessing.launch.py  demo_environment.launch.py  demo_simulation.launch.py  simple_plate_simulation.launch.py  test.config.yaml  test.launch.py
test_env2/simple_plate/: config.yaml
test_env2/simple_plate/output/: OccupancyGrid.vdb
